--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,7 @@ line-height: 24px;
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
+
 }
 .header-login a {
   color: var(--basic-black);
@@ -293,11 +294,18 @@ border-radius: 50%;
   border: 3px solid var(--basic-white);
   padding-top: 5px;
   padding-bottom:10px;
-  padding-left: 36px;
+  padding-left: 74px;
+  position: relative;
 }
 .contacts-telephone a::before{
-  content: url(../img/icons/icon-phone.svg);
-  padding-right: 15px;
+  content: "";
+  position: absolute;
+  width: 19px;
+  height: 19px;
+  background-image: url(../img/icons/icon-phone.svg);
+  top:13px;
+  left: 39px;
+
 }
 .contacts-address{
   margin-top: 0;
@@ -314,6 +322,9 @@ border-radius: 50%;
 }
 .login:hover{
   color: var(--basic-red);
+}
+.login:hover path{
+  fill: var(--basic-blue);
 }
 .login:active{
   color: var(--basic-gray);
@@ -841,6 +852,7 @@ margin: 0;
   background-color: var(--basic-light-gray);
   padding-bottom: 30px;
   z-index: 1;
+  display: none;
 }
 .guarantee{
   position: absolute;
@@ -848,14 +860,16 @@ margin: 0;
   background: url(../img/features/guarantee.png) no-repeat 100% 0%;
   background-color: var(--basic-light-gray);
   padding-bottom: 30px;
-  z-index: 0;
+  z-index: 1;
+  display: none;
 }
 .credit{
   position: absolute;
   width: 598px;
   background: url(../img/features/credit.png) no-repeat 100% 0%;
   background-color: var(--basic-light-gray);
-  z-index: 0;
+  z-index: 1;
+  display: none;
 
 }
 .credit-button{
@@ -872,6 +886,7 @@ margin: 0;
   padding: 0;
   margin-top: 70px;
   margin-bottom: 70px;
+  position: relative;
 }
 .partners li{
   font-size: 18px;
@@ -1609,9 +1624,17 @@ hr{
 .modal-write-us{
 background-color: var(--basic-white);
 Width: 620px;
-min-height: 430px;
+height: 430px;
 border-top: 7px solid var(--basic-red);
-position: relative;
+position:fixed;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+margin: auto;
+box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+z-index: 5;
+display: none;
 }
 .write-us-form label{
   font-size: 18px;
@@ -1695,22 +1718,30 @@ textarea{
   Height:21px;
   border: none;
   background: url(../img/icons/icon-close.svg) no-repeat;
+  cursor: pointer;
 }
 .modal-close:focus{
   outline: none;
-  cursor: pointer;
 }
 
 /* Modal / Map */
 .modal-modal-map{
-  position: relative;
+  position:fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  z-index: 5;
   background-color: var(--basic-gray);
   Width: 943px;
   Height: 450px;
   border-top: 7px solid var(--basic-red);
   padding: 0;
-  margin: 0;
+  display: none;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
+
 .modal-modal-map iframe{
   margin: 0;
   padding: 0;
@@ -1719,11 +1750,19 @@ textarea{
 }
 /* Modal / Add-product */
 .modal-add-product{
-  position: relative;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  z-index: 5;
   background-color: var(--basic-white);
   Width: 620px;
   Height: 280px;
   border-top: 7px solid var(--basic-red);
+  display: none;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 .modal-add-product p{
   position: absolute;
@@ -1739,4 +1778,21 @@ textarea{
   left:-95px;
   top:-19px;
 }
+.modal-btn{
+  background-color: var(--basic-white);
+  color: var(--basic-black);
+  margin-left: 6px;
+}
+.modal-btn:hover{
+  background-color: var(--basic-white);
+  color: var(--basic-black);
+  border: 1px solid var(--basic-red);
 
+}
+.modal-show{
+  display: block;
+  }
+
+.block-show{
+ display: block;
+ }
